added to crawler_seed